--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,18 @@
         <div class="trip-main__trip-controls  trip-controls">
           <div class="trip-controls__navigation">
             <h2 class="visually-hidden">Switch trip view</h2>
-            <!-- Меню -->
+            <nav class="trip-controls__trip-tabs  trip-tabs">
+              <a class="trip-tabs__btn  trip-tabs__btn--active" href="#">Table</a>
+              <a class="trip-tabs__btn" href="#">Stats</a>
+            </nav>
           </div>
 
           <div class="trip-controls__filters">
             <h2 class="visually-hidden">Filter events</h2>
-            <!-- Фильтры -->
           </div>
         </div>
 
-        <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
+        <button class="trip-main__event-add-btn btn btn--big btn--yellow" type="button">New event</button>
       </div>
     </div>
   </header>
